--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.13.1",
+    "@types/pg": "^8.10.9",
     "@types/ws": "^8.5.14",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3"
