--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.10.9",
     "@types/node": "^22.13.1",
     "@types/ws": "^8.5.14",
     "tsx": "^4.19.2",
