--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "dev:4101": "PORT=4101 npm run dev",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js"
   },
