--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "test:e2e:probe": "playwright test e2e/probe.spec.ts",
     "dev:full": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "npm --prefix backend run dev:4101",
-    "dev:frontend": "npm run dev:5174"
+    "dev:frontend": "npm run dev:5174",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "typecheck:backend": "npm --prefix backend run typecheck",
+    "build:frontend": "vite build",
+    "build:backend": "npm --prefix backend run build",
+    "build:all": "npm run build:frontend && npm run build:backend",
+    "ci": "npm run typecheck && npm run typecheck:backend && npm run build:all"
   },
   "dependencies": {
     "phaser": "^3.90.0",
