--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "dev:4101": "PORT=4101 npm run dev",
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc -p ../shared/tsconfig.json && tsc -p tsconfig.json",
     "start": "node dist/server.js"
   },
   "dependencies": {
