Add full production start flow and SPA static serving

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "build:backend": "npm --prefix backend run build",
     "build:all": "npm run build:frontend && npm run build:backend",
     "ci": "npm run typecheck && npm run typecheck:shared && npm run typecheck:backend && npm run build:all",
-    "typecheck:shared": "test -f shared/tsconfig.json && tsc -p shared/tsconfig.json --noEmit || echo \"shared/tsconfig.json missing; skipping\""
+    "typecheck:shared": "test -f shared/tsconfig.json && tsc -p shared/tsconfig.json --noEmit || echo \"shared/tsconfig.json missing; skipping\"",
+    "build:full": "npm run build:frontend && npm run build:backend",
+    "start:backend": "npm --prefix backend run start",
+    "start:full": "npm run build:full && npm run start:backend"
   },
   "dependencies": {
     "phaser": "^3.90.0",
