Harden release startup config, healthcheck, and docs

--- a/.github/workflows/probe-artifacts.yml
+++ b/.github/workflows/probe-artifacts.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   probe-artifacts:
     runs-on: ubuntu-latest
+    env:
+      GIT_SHA: ${{ github.sha }}
     timeout-minutes: 10
 
     steps:
