--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typecheck:shared": "test -f shared/tsconfig.json && tsc -p shared/tsconfig.json --noEmit || echo \"shared/tsconfig.json missing; skipping\"",
     "build:full": "npm run build:frontend && npm run build:backend",
     "start:backend": "npm --prefix backend run start",
-    "start:full": "npm run build:full && npm run start:backend"
+    "start:full": "npm run build:full && npm run start:backend",
+    "test:e2e:ui": "playwright test e2e/ui_mobile_landscape.spec.ts"
   },
   "dependencies": {
     "phaser": "^3.90.0",
