--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "build:full": "npm run build:frontend && npm run build:backend",
     "start:backend": "npm --prefix backend run start",
     "start:full": "npm run build:full && npm run start:backend",
-    "test:e2e:ui": "playwright test e2e/ui_mobile_landscape.spec.ts"
+    "test:e2e:ui": "playwright test ./e2e/ui_mobile_landscape.spec.ts"
   },
   "dependencies": {
     "phaser": "^3.90.0",
