--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
     "@playwright/test": "1.49.1",
-    "concurrently": "9.1.2"
+    "concurrently": "9.1.2",
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
