Add configurable API base for frontend /api requests

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 VITE_WS_URL=ws://localhost:4101
+# Backend origin (no trailing slash, NO /api at the end)
+# Example: https://your-backend-domain.com
+VITE_API_BASE_URL=
