--- a/.github/workflows/probe-artifacts.yml
+++ b/.github/workflows/probe-artifacts.yml
@@ -13,6 +13,7 @@ jobs:
       GIT_SHA: ${{ github.sha }}
       VITE_API_BASE_URL: http://127.0.0.1:4101
       VITE_WS_URL: ws://127.0.0.1:4101
+      VITE_PROBE_MODE: true
     timeout-minutes: 10
 
     steps:
