--- a/.github/workflows/probe-artifacts.yml
+++ b/.github/workflows/probe-artifacts.yml
@@ -37,6 +37,8 @@ jobs:
         run: mkdir -p artifacts
 
       - name: Run Playwright Probe E2E
+        env:
+          VITE_PROBE_MODE: "true"
         run: npx playwright test e2e/probe.spec.ts
 
       - name: Run Playwright Mobile Landscape UI E2E
